<resources>
    <string name="app_name">RDV</string>
    <string name="google_maps_api_key">AIzaSyDS3QQn_QeEb-hLNerGPk6qXfos67ZSjY8</string>
    <string name="new_appointment">New appointment</string>
    <string name="invite">Invite for an appointment</string>
    <string name="contacts">Invite a contact</string>
    <string name="enter_number">Enter the phone number:</string>
    <string name="seeMap">See coordinates on map</string>
    <string name="title_activity_choose_location">ChooseLocationActivity</string>
    <string name="seeNotifications">See notifications</string>
    <string name="notifications">Notifications</string>
    <string name="meetings">Meetings</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Send your location or choose a location</string>
    <string name="send_my_location">Send my location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="send_other_location">Send another location</string>
    <string name="change_message">You can change this message</string>
    <string name="send_message">Send message</string>
    <string name="seeMeetings">See meetings</string>
</resources>
